fix collapse menu bug

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ h5{
 }
 
 .collapse{
-  height: 28rem;
+  height: 32rem;
 }
 
 .nav-items{
